// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MealsService createMealEntry should create a new meal entry and update user streak when there is no current diary entry 1`] = `
{
  "create": {
    "date": "2023-04-13",
    "hasMealBreakfast": true,
    "mealBreakfast": [
      {
        "description": "mock_description_2",
        "emoji": {
          "name": "mock_emoji_name_2",
          "nativeSkin": "mock_emoji_native_skin_2",
        },
        "food": "mock_food_2",
        "id": "2",
        "measurement": "mock_measurement_2",
        "serving": "mock_serving_2",
      },
    ],
    "userId": 1234,
  },
  "update": {
    "hasMealBreakfast": true,
    "mealBreakfast": [
      {
        "description": "mock_description_2",
        "emoji": {
          "name": "mock_emoji_name_2",
          "nativeSkin": "mock_emoji_native_skin_2",
        },
        "food": "mock_food_2",
        "id": "2",
        "measurement": "mock_measurement_2",
        "serving": "mock_serving_2",
      },
    ],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;

exports[`MealsService createMealEntry should create new meal entry if type doesnt exist but diary day entry does 1`] = `
{
  "create": {
    "date": "2023-04-13",
    "hasMealDinner": true,
    "mealDinner": [
      {
        "description": "other_food_description_2",
        "food": "other_food_type_3",
        "id": "3",
      },
    ],
    "userId": 1234,
  },
  "update": {
    "hasMealDinner": true,
    "mealDinner": [
      {
        "description": "other_food_description_2",
        "food": "other_food_type_3",
        "id": "3",
      },
    ],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;

exports[`MealsService createMealEntry should update current meal entry type if exists and update user streak 1`] = `
{
  "create": {
    "date": "2023-04-13",
    "hasMealBreakfast": true,
    "mealBreakfast": [
      {
        "description": "mock_description_2",
        "food": "mock_food_1",
        "id": "1",
      },
      {
        "description": "mock_description_2",
        "emoji": {
          "name": "mock_emoji_name_2",
          "nativeSkin": "mock_emoji_native_skin_2",
        },
        "food": "mock_food_2",
        "id": "2",
        "measurement": "mock_measurement_2",
        "serving": "mock_serving_2",
      },
    ],
    "userId": 1234,
  },
  "update": {
    "hasMealBreakfast": true,
    "mealBreakfast": [
      {
        "description": "mock_description_2",
        "food": "mock_food_1",
        "id": "1",
      },
      {
        "description": "mock_description_2",
        "emoji": {
          "name": "mock_emoji_name_2",
          "nativeSkin": "mock_emoji_native_skin_2",
        },
        "food": "mock_food_2",
        "id": "2",
        "measurement": "mock_measurement_2",
        "serving": "mock_serving_2",
      },
    ],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;

exports[`MealsService deleteMealEntry should cater for if trying to remove id that doesnt exist 1`] = `
{
  "data": {
    "hasMealBreakfast": true,
    "mealBreakfast": [
      {
        "description": "mock_description_2",
        "food": "mock_food_1",
        "id": "1",
      },
    ],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;

exports[`MealsService deleteMealEntry should cater for if trying to remove meal-type that doesnt exist 1`] = `
{
  "data": {
    "hasMealSnack1": false,
    "mealSnack1": [],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;

exports[`MealsService deleteMealEntry should remove a meal by id from current meals 1`] = `
{
  "data": {
    "hasMealBreakfast": false,
    "mealBreakfast": [],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;

exports[`MealsService updateMealEntry should cater for if current meal doesnt exist 1`] = `
{
  "data": {
    "hasMealSnack1": false,
    "hasMealSnack2": true,
    "mealSnack1": [],
    "mealSnack2": [
      {
        "description": "mock_description_2",
        "emoji": {
          "name": "mock_emoji_name_2",
          "nativeSkin": "mock_emoji_native_skin_2",
        },
        "food": "mock_food_2",
        "id": "2",
        "measurement": "mock_measurement_2",
        "serving": "mock_serving_2",
      },
    ],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;

exports[`MealsService updateMealEntry should update a current meal contents to a new type 1`] = `
{
  "data": {
    "hasMealBreakfast": true,
    "hasMealDinner": true,
    "mealBreakfast": [
      {
        "description": "mock_description_2",
        "food": "mock_food_1",
        "id": "1",
      },
    ],
    "mealDinner": [
      {
        "description": "mock_description_2",
        "emoji": {
          "name": "mock_emoji_name_2",
          "nativeSkin": "mock_emoji_native_skin_2",
        },
        "food": "mock_food_2",
        "id": "2",
        "measurement": "mock_measurement_2",
        "serving": "mock_serving_2",
      },
    ],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;

exports[`MealsService updateMealEntry should update a current meal contents with new meal contents if meal types are the same 1`] = `
{
  "data": {
    "mealBreakfast": [
      {
        "description": "mock_description_2",
        "food": "mock_food_1",
        "id": "1",
      },
    ],
  },
  "where": {
    "userId_date": {
      "date": "2023-04-13",
      "userId": 1234,
    },
  },
}
`;
